[package]
name = "x509-certificate-printer"
version = "0.1.0"
edition = "2021"
description = "Parse and print X.509 certificate information in human-readable and PEM formats."
repository = "https://github.com/cmdscale/x509-certificate-printer"
readme = "README.md"
license = "MIT"
authors = ["Tilman Baumann <tilman.baumann@cmdscale.com>"]
keywords = ["x509", "certificate", "pem", "der", "x509-parser"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
x509-parser = "0.18.1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
base64 = "0.22"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cert-printer"
path = "src/main.rs"
